# aws_lambda_demo_rust

./: .gitignore  README.md
lambda_test/: Cargo.toml  Makefile  output.json
lambda_test/src/: main.rs
rust_aws_lambda_client/: Cargo.toml  Makefile
rust_aws_lambda_client/src/: main.rs
