[package]
name = "lambda_test"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = { version = "^1.0", features = ["derive"] }
simple_logger = "1.6.0"
log = "^0.4"
simple-error = "0.2"

[dev-dependencies]
simple_logger = "1.6.0"
log = "^0.4"
simple-error = "0.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

