[package]
name = "rust_aws_lambda_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3.0"
aws-sdk-ec2 = "0.3.0"
aws-sdk-lambda = "0.3.0"
aws-types = "0.3.0"
tokio = { version = "1", features = ["full"] }
# tokio = { version = "1.0", features = ["io-util"] }
structopt = { version = "0.3", default-features = false }
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
